<resources>
    <string name="app_name">UpdatedAssignment1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">REGISTER</string>
    <string name="tab_text_2">PURCHASE</string>
    <string name="tab_text_3">CHECK OUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catch_phrase">You Made it Boi!</string>
    <string name="samsung_uhd_tv_nprice_ksh_90_000">SAMSUNG UHD TV\nPRICE: Ksh 90,000</string>
    <string name="hisense_text">HISENSE ULED 4K GAMING TV\nPRICE: Ksh 150,000</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>
</resources>